# rabbitizer

./: .clang-tidy  .gitattributes  .gitignore  .markdownlint.json  .markdownlint.jsonc  CHANGELOG.md  Cargo.toml  MANIFEST.in  Makefile  README.md  a.py  adsf.py  allegrex_errors.txt  asdf.txt  asdfasdf.txt  b.py  build_to_mips.txt  index.html  mips3be-unknown-none-o32.json  pyproject.toml  r5900test.c  rab-disasmdis-web-107428b14b2dfb55_bg.wasm  rab-disasmdis-web-15aaebaaf280f684_bg.wasm  rab-disasmdis-web-230b0495c3d5e0e_bg.wasm  rab-disasmdis-web-349b65ea0d7aa79d.js  rab-disasmdis-web-349b65ea0d7aa79d_bg.wasm  rab-disasmdis-web-36552e98d8b383a1_bg.wasm  rab-disasmdis-web-3af2cf2ca470781_bg.wasm  rab-disasmdis-web-3ebc34d3c532f8a1.js  rab-disasmdis-web-3ebc34d3c532f8a1_bg.wasm  rab-disasmdis-web-3f1fde9267eb4dc3_bg.wasm  rab-disasmdis-web-429c62e4313f5db3_bg.wasm  rab-disasmdis-web-515d1bc08b944061_bg.wasm  rab-disasmdis-web-587238d3be693a4_bg.wasm  rab-disasmdis-web-5ef15c5539428217_bg.wasm  rab-disasmdis-web-60fbd22cc3a43ce5_bg.wasm  rab-disasmdis-web-67a56e384c2a88c5.js  rab-disasmdis-web-67a56e384c2a88c5_bg.wasm  rab-disasmdis-web-68ed649e8a275452_bg.wasm  rab-disasmdis-web-6c1cfae1d1af59df.js  (+25 more)
rust/: Cargo.toml  Makefile  build.rs
rust/src/: abi_enum.rs  abi_enum.tablers.template  access_type_enum.rs  access_type_enum.tablers.rs  access_type_enum.tablers.template  config.rs  instr_category_enum.rs  instr_category_enum.tablers.rs  instr_category_enum.tablers.template  instr_descriptor.rs  instr_id_enum.rs  instr_id_enum.tablers.rs  instr_id_enum.tablers.template  instr_id_type_enum.rs  instr_suffix_enum.rs  instr_suffix_enum.tablers.template  instruction.rs  lib.rs  operand_type_enum.rs  operand_type_enum.tablers.rs  operand_type_enum.tablers.template  opereand_type.rs  register_descriptor.rs  registers.rs  registers_enum.rs  registers_enum.tablers.rs  registers_enum.tablers.template  registers_methods.rs  utils.rs
src/rab-disasmdis/: Cargo.toml  README.md
src/rab-disasmdis-web/: Cargo.toml  README.md  build.rs  index.html  styles.css  themes.css
src/rab-disasmdis-web/src/: bytes_text_parser.rs  main.rs  persistent_state.rs
src/rab-disasmdis-web/src/settings/: branch_default_label_display.rs  coding_mode.rs  endian.rs  isa_extension.rs  isa_version.rs  mod.rs  theme.rs  vram.rs
src/rab-disasmdis/src/: bin.rs  endian.rs  isas.rs
src/rabbitizer/: Cargo.toml  README.md  abi.rs  access_type.rs  bin.rs  encoded_field_mask.rs  error.rs  flags.rs  generated.rs  instr_suffix.rs  instr_type.rs  instruction.rs  instruction_display.rs  isa_extension.rs  isa_version.rs  lib.rs  opcode.rs  opcode_category.rs  opcode_category_descriptor.rs  opcode_decoder.rs  opcode_descriptor.rs  operand.rs  operand_descriptor.rs  pyproject.toml  register_cop0.rs  register_cop1.rs  register_cop1control.rs  register_cop2.rs  register_descriptor.rs  register_gpr.rs  register_r4000allegrex_m2x2.rs  register_r4000allegrex_m3x3.rs  register_r4000allegrex_m4x4.rs  register_r4000allegrex_s.rs  register_r4000allegrex_v2d.rs  register_r4000allegrex_v3d.rs  register_r4000allegrex_v4d.rs  register_r4000allegrex_vconstant.rs  register_r4000allegrex_vfpucontrol.rs  register_r5900allegrex_vf.rs  (+11 more)
src/rabbitizer/benches/: instruction.rs
src/rabbitizer/display_operand/: display_operand_none.rs  display_operand_r3000gte.rs  display_operand_r4000allegrex.rs  display_operand_r5900.rs  display_operand_rsp.rs  mod.rs
src/rabbitizer/instr/: instr_suffix.rs  instruction.rs  instruction_flags.rs
src/rabbitizer/isa/: isa_extension.rs  mod.rs
src/rabbitizer/opcodes/: decoding_flags.rs  mod.rs  opcode.rs  opcode_category_descriptor.rs  opcode_decoder.rs  opcode_descriptor.rs
src/rabbitizer/operand_display/: mod.rs  operand_display_none.rs  operand_display_r3000gte.rs  operand_display_r4000allegrex.rs  operand_display_r5900.rs  operand_display_rsp.rs
src/rabbitizer/operands/: mod.rs  operand.rs  operand_descriptor.rs  valued_operand.rs
src/rabbitizer/operands/operand_display/: mod.rs  operand_display_none.rs  operand_display_r3000gte.rs
src/rabbitizer/register_descriptors/: mod.rs  register_descriptor.rs
src/rabbitizer/register_impls/: mod.rs  register_cop0.rs  register_cop0control.rs  register_cop1.rs  register_cop1control.rs  register_cop2.rs  register_cop2control.rs  register_gpr.rs  register_r4000allegrex_m2x2.rs  register_r4000allegrex_m3x3.rs  register_r4000allegrex_m4x4.rs  register_r4000allegrex_prefix_dst.rs  register_r4000allegrex_prefix_src.rs  register_r4000allegrex_s.rs  register_r4000allegrex_v2d.rs  register_r4000allegrex_v3d.rs  register_r4000allegrex_v4d.rs  register_r4000allegrex_vcond.rs  register_r4000allegrex_vconstant.rs  register_r4000allegrex_vfpucontrol.rs  register_r5900allegrex_vf.rs  register_r5900allegrex_vi.rs  register_rsp_cop0.rs  register_rsp_cop2.rs  register_rsp_cop2_control.rs  register_rsp_gpr.rs  register_rsp_vector.rs
src/rabbitizer/registers/: mod.rs  register_cop0control.rs  register_cop1.rs  register_cop2.rs  register_cop2control.rs  register_gpr.rs  register_r4000allegrex_m2x2.rs  register_r4000allegrex_m4x4.rs  register_r4000allegrex_prefix_src.rs  register_r4000allegrex_s.rs  register_r4000allegrex_v4d.rs  register_r4000allegrex_vconstant.rs  register_r4000allegrex_vfpucontrol.rs  register_r5900allegrex_vi.rs  register_rsp_cop0.rs  register_rsp_cop2_control.rs  register_rsp_vector.rs
src/rabbitizer/src/: abi.rs  access_type.rs  access_type_descriptor.rs  display_flags.rs  encoded_field_mask.rs  error.rs  generated.rs  lib.rs  traits.rs  utils.rs
src/rabbitizer/src/encoder/: encoder_iterator.rs  encoding_error.rs  mod.rs  operand_encoder.rs  token.rs
src/rabbitizer/src/instr/: instr_field.rs  instr_suffix.rs  instr_type.rs  instruction.rs  instruction_display.rs  (+2 more)
src/rabbitizer/tests/: instruction_tests.rs  instruction_tests_core.rs  instruction_tests_none.rs  instruction_tests_r3000gte.rs  instruction_tests_r4000allegrex.rs  instruction_tests_r5900.rs  instruction_tests_r5900ee.rs  instruction_tests_rsp.rs  mod.rs
src/rabbitizer/vram/: mod.rs  vram.rs
(+845 files in other folders)
