# SPDX-FileCopyrightText: © 2022-2024 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "rabbitizer"
# Version should be synced with include/common/RabbitizerVersion.h
version = "1.12.3"
edition = "2021"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
description = "MIPS instruction decoder"
readme = "README.md"
repository = "https://github.com/Decompollaborate/rabbitizer"
license-file = "LICENSE"
rust-version = "1.66.1"
keywords = ["MIPS", "decoder"]
build = "rust/build.rs"
include = ["/rust/src", "/rust/build.rs", "/src", "/include", "/tables"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "rust/src/lib.rs"

[dependencies]
num_enum = "0.5.7"

[build-dependencies]
cc = "1.0.78"
glob = "0.3.0"
