# SPDX-FileCopyrightText: © 2022-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[workspace]
members = [
    "src/rabbitizer",
    "src/rab-disasmdis",
]
resolver = "2"

[workspace.package]
# Version should be synced with include/common/RabbitizerVersion.h
version = "2.0.0-alpha.1"
edition = "2021"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
repository = "https://github.com/Decompollaborate/rabbitizer"
license = "MIT"
rust-version = "1.82.0"
