# SPDX-FileCopyrightText: © 2022-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[workspace]
members = [
    "src/rabbitizer",
    "src/rab-disasmdis",
    "src/rab-disasmdis-web",
]
resolver = "2"
default-members = ["src/rabbitizer", "src/rab-disasmdis"]

[workspace.package]
# Version should be synced with include/common/RabbitizerVersion.h
version = "2.0.0-alpha.6"
edition = "2021"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
repository = "https://github.com/Decompollaborate/rabbitizer"
license = "MIT"

# Use https://github.com/foresterre/cargo-msrv to check the MSRV
# ```
# cargo install cargo-msrv --locked --force
# cargo msrv find -- cargo check -p rabbitizer -F doc
# ```
rust-version = "1.82.0"
