# SPDX-FileCopyrightText: © 2022-2024 Decompollaborate
# SPDX-License-Identifier: MIT

[project]
name = "rabbitizer"
# Version should be synced with include/common/RabbitizerVersion.h
version = "1.13.0"
description = "MIPS instruction decoder"
# license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Anghelo Carvajal", email="angheloalf95@gmail.com" },
]

[project.urls]
"Homepage" = "https://github.com/Decompollaborate/rabbitizer"
"Bug Tracker" = "https://github.com/Decompollaborate/rabbitizer/issues"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["rabbitizer"]

[tool.setuptools.package-data]
rabbitizer = ["py.typed", "*.pyi", "**/*.pyi"]

[tool.cibuildwheel]
skip = ["cp36-*"]
