# SPDX-FileCopyrightText: © 2022 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "rabbitizer"
# Version should be synced with include/common/RabbitizerVersion.h
version = "1.5.0"
edition = "2021"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
description = "MIPS instruction decoder"
readme = "README.md"
homepage = "https://github.com/Decompollaborate/rabbitizer"
repository = "https://github.com/Decompollaborate/rabbitizer"
license = "MIT"
keywords = ["MIPS", "decoder"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
libc = "0.2.138"
num_enum = "0.5.7"
