# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "rab-disasmdis-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Disassemble MIPS instructions directly in your browser, using the power of rabbitizer."
readme = "README.md"
# keywords = ["MIPS", "decoder", "cli"]
# categories = ["command-line-utilities"]
build = "build.rs"

[[bin]]
name = "rab-disasmdis-web"
path = "src/main.rs"

[dependencies]
gloo = { version = "0.11" }
log = { version = "0.4" }
rabbitizer = { path = "../rabbitizer", version = "2.0.0-alpha.4", features = ["all_extensions", "all_gated_extensions", "serde"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2" }
wasm-logger = { version = "0.2" }
web-sys = { version = "0.3", features = ["InputEvent", "HtmlSelectElement"] }
yew = { version = "0.21.0", features = ["csr"] }

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
