# SPDX-FileCopyrightText: © 2024-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "rab-disasmdis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Disassemble MIPS instructions directly in your terminal, using the power of rabbitizer."
readme = "README.md"
keywords = ["MIPS", "decoder", "cli"]
categories = ["command-line-utilities"]

[[bin]]
# Just for testing
name = "rab-disasmdis"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rabbitizer = { path = "../rabbitizer", version = "2.0.0-alpha.4", features = ["all_extensions"] }
