# SPDX-FileCopyrightText: © 2024-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "rabbitizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MIPS instruction decoder"
readme = "README.md"
keywords = ["MIPS", "decoder"]
# build = "rust/build.rs"
# include = ["/rust/src", "/rust/build.rs", "/src", "/include", "/tables"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[features]
default = []
std = []

# TODO: Normalize capitalization
RSP = []
R3000GTE = []
R4000ALLEGREX = []
R5900EE = []

RspViceMsp = ["RSP"]

all_extensions = [
    "RSP",
    "R3000GTE",
    "R4000ALLEGREX",
    "R5900EE",
]

all_gated_extensions = [
    "all_extensions",
    "RspViceMsp",
]

bindings_c = []
pyo3 = ["std", "dep:pyo3", "all_extensions", "all_gated_extensions"]

[dependencies]
bitflags = { version = "2.6.0", default-features = false }
pyo3 = { version = "0.23.2", optional = true }

[dev-dependencies]
criterion = { version ="0.3", features = ["html_reports"]}

[[bench]]
name = "instruction"
harness = false
